feat(apisimp): APISIMP-CONTAINER-TEMPORAL-ANNOTATIONS-UNCAPPED — page/pageSize + X-Total-Count on listTemporalAnnotations
Add pagination to GET /v2/containers/{appId}/temporal-annotations:
- ?page=0&pageSize=200 (default), pageSize capped at 500
- X-Total-Count response header on every 200
- ContainerKindHandler SPI: listTemporalAnnotations(appId, page, pageSize)
- TimeseriesContainerKindHandler: in-memory slice returning PagedResponseIO<TimeseriesAnnotationIO>
- ContainersV2Rest: @Parameter-annotated page/pageSize @QueryParam with @Min/@Max/@DefaultValue
- 3 new unit tests in ContainersV2RestTest (X-Total-Count, @Parameter docs)
- 3 updated + 1 new unit tests in TimeseriesContainerKindHandlerTemporalAnnotationTest
- aidocs/16: APISIMP-CONTAINER-TEMPORAL-ANNOTATIONS-UNCAPPED → in-flight (fire-381)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XLe13JW4nDwKXtYu5oG8Pu